--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.1",
+    "axios": "^1.4.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
