--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite ",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "sort": "prettier --find-config-path prettier.config.js"
+    "preview": "vite preview"
+    
   },
   "dependencies": {
     "@dnd-kit/core": "^6.0.8",
